# RQ1

./: .gitignore  README.md
code/: .env.example  requirements-server.txt  requirements.txt
code/figures/: availability_figures.py  figure_length_readability.py  figure_wordcount_fkgl_gdpr_v4.py  fp_availability_by_category_h.py  fp_availability_combined.py  style.py
code/llm_serving/: README.md  env_local.sh  serve_ollama.sh  serve_vllm.sh
code/pipeline/: README.md  config.py  extractor.py  graph.py  graph_neighborhoods.py  normalizer.py  pair_cache.py  patterns.py  pipeline.py  schema.py  scope_classifier.py  verifier.py
code/prompts/: unified_prompts.py
code/scripts/: run_evaluation.py  run_extraction.py  run_verification.py  train_roberta.py
data/: README.md  manifest.csv  manifest.summary.json  random2_pair_ids.json  random2_summary.json  sample_pairs.csv
data/sample_policies/: example_site.txt  example_vendor.txt
gdpr_classifier/: TRAINING_README.md  train.py
gdpr_classifier/results/: gdpr_bert_base_results.json  gdpr_legalbert_results.json  gdpr_roberta_results.json
notebook/: reproduce_findings.ipynb  reproduce_pairs.ipynb
notebooks/: Classifier.ipynb  Evaluation.ipynb  RQ1.ipynb  RQ2.ipynb  RQ3.ipynb
scraper/: README.md  pyproject.toml  requirements.txt
scraper/privacy_research_dataset/: crawl4ai_client.py  crawler.py  robust_scraping.py
scraper/privacy_research_dataset/data/: site_policy_overrides.csv  tp_policy_overrides.csv
scraper/privacy_research_dataset/utils/: asyncio.py
